# Work-Backup-April-05-2025

./: .gitignore  README.md
UzmanWork/logistics-app/: .dev.env  .dockerignore  .gitignore  .staging.env  README.md  alembic-migrator.Dockerfile  copy_to_native.sh  docker-compose.backend.yaml  docker-compose.build-backend.yaml  docker-compose.dev.yaml  frontend.Dockerfile  pull_request_template.md  pyproject.toml  run_backend_profiler.sh  run_backend_tests.sh  run_compose_cmd_dev.sh  run_mobile_command.sh  testing.Dockerfile
UzmanWork/logistics-app/.github/workflows/: check_backwards_compatible_api.yml  deploy-staging.yml  deploy-template.yml  docker-build-frontend.yml  python-check.yml
UzmanWork/logistics-app/backend/: auth_context.py  auth_models.py  boto_utils.py  constants.py  dependencies.py  email_sending.py  llm.py  main.py  message_queue.py  middleware.py  router_utils.py  s3_utils.py  scoped_timer.py  slack_client.py  sync_utils.py  utils.py  validators.py  ws_models.py
UzmanWork/logistics-app/backend/access_control/: http_client_utils.py  models.py  router.py
UzmanWork/logistics-app/backend/access_logs/: constants.py  utils.py
UzmanWork/logistics-app/backend/admin/: router.py
UzmanWork/logistics-app/backend/alert/: alert_models.py  models.py  tasks.py
UzmanWork/logistics-app/backend/archive/: models.py  router.py  utils.py
UzmanWork/logistics-app/backend/auth0_api/: auth0_api.py  auth0_user.py
UzmanWork/logistics-app/backend/aws_signer/: aws_signer.py  aws_signer_models.py  aws_signer_utils.py
UzmanWork/logistics-app/backend/cameras_registration/: cameras_registration_utils.py
UzmanWork/logistics-app/backend/clip_data/: constants.py  models.py  tasks.py
UzmanWork/logistics-app/backend/dashboard/: models.py
UzmanWork/logistics-app/backend/database/: access_points_models.py  dashboard_models.py  database.py  face_models.py  geometry_models.py  migration_utils.py  network_scan_models.py  session.py  tag_models.py  time_range_models.py
UzmanWork/logistics-app/backend/database_management/: partitions_tasks.py
UzmanWork/logistics-app/backend/devices/: constants.py  utils.py
UzmanWork/logistics-app/backend/escapi/: escapi_router.py
UzmanWork/logistics-app/backend/face/: models.py  utils.py
UzmanWork/logistics-app/backend/face_alert/: router.py
UzmanWork/logistics-app/backend/instrumentation/: context.py  utils.py
UzmanWork/logistics-app/backend/iot_core/: db_utils.py  utils.py
UzmanWork/logistics-app/backend/kinesis_api/: hls_utils.py  models.py
UzmanWork/logistics-app/backend/kiosk/: public_router.py  router.py
UzmanWork/logistics-app/backend/license_plate/: router.py  router_edge.py
UzmanWork/logistics-app/db_maintence/: backfill_archived_thumbnails.sql  backfill_tenant_aware_partitioned_table.sql  backfill_tenant_aware_table.sql  backfill_tenant_aware_table_by_sub_partitions.sql  set_partitions_retention_if_null.sql
UzmanWork/logistics-app/frontend/: .eslintrc.js
UzmanWork/logistics-app/scripts/: add_synthetic_user_alert.py  database_util.py  drop_db.py  populate_db.sh
UzmanWork/logistics-app/telegraf/: telegraf.conf
core/: .npmrc  (+8 more)
(+4861 files in other folders)
